Evolution: Customization of the follow and social part of the e template.

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,6 @@
 languageCode = "en-gb"
 title = "Make it work, Make it right, Make it fast"
 theme= "spf13"
+
+[author]
+    name = "Hervé Darritchon"
