--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseurl = "http://herveDarritchon.github.io/"
 languageCode = "en-gb"
 title = "Make it work, Make it right, Make it fast"
-theme= "spf13"
+theme= "hd-theme"
 
 [author]
     name = "Hervé Darritchon"
