--- a/wercker.yml
+++ b/wercker.yml
@@ -20,4 +20,7 @@ build:
     # Read more about steps on our dev center:
     # http://devcenter.wercker.com/docs/steps/index.html
     steps:
-      - arjen/hugo-build@1.3.0
+      - arjen/hugo-build:
+        version: 1.3.0
+        theme: hd-theme
+        flags: --buildDrafts=true
