--- a/wercker.yml
+++ b/wercker.yml
@@ -1,7 +1,7 @@
 box: wercker/default
 build:
   steps:
-    - arjen/hugo-build@1.3.0
+    - arjen/hugo-build@1.3.0:
         version: 0.12
         theme: hd-theme
         flags: --buildDrafts=true
