--- a/wercker.yml
+++ b/wercker.yml
@@ -1,7 +1,8 @@
-box: wercker/default@0.0.2
+box: wercker/default
 build:
   steps:
-    - arjen/hugo-build@1.3.0:
-        version: 0.12
+    - arjen/hugo-build:
+        version: 0.14
         theme: hd-theme
-        flags: --buildDrafts=true
+        config: config.toml
+        flags: --disableSitemap=true
