--- a/wercker.yml
+++ b/wercker.yml
@@ -6,6 +6,6 @@ build:
         flags: --disableSitemap=true
 deploy:
   steps:
-    - lukevivier/gh-pages@0.2.1:
+    - lukevivier/gh-pages:
         token: $GIT_TOKEN
         basedir: public
